# PGM2CHR

./: .gitignore  CMakeLists.txt  README.md  example.pgm  example1.pgm  example2.pgm
.github/workflows/: build.yml
src/: binary.c  binary.h  chr.c  chr.h  main.c  progInfo.h.in  tile.c  tile.h
